add_subdirectory("ImGuiWrapper")
file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_executable(WsEditor ${HEADERS} ${SOURCES})
target_link_libraries(WsEditor ImGuiWrapper)
target_link_libraries(WsEditor ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/imgui_node_editor.lib)
target_link_libraries(WsEditor ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/imgui_canvas.lib)