add_library(ImGuiWrapper ImGuiWrapper.h ImGuiWrapper.cpp)
target_link_libraries(ImGuiWrapper ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/imgui_node_editor.lib)
target_link_libraries(ImGuiWrapper ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/imgui_canvas.lib)
target_link_libraries(ImGuiWrapper ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/imgui.lib)

if (WS_OS_WIN)
add_library(ImGuiWindowWin ImGuiWindowWin.h ImGuiWindowWin.cpp)
target_compile_definitions(ImGuiWindowWin PUBLIC "ImDrawIdx=unsigned int")
target_link_libraries(ImGuiWrapper ImGuiWindowWin)

add_library(ImGuiRendererDX11 ImGuiRendererDX11.h ImGuiRendererDX11.cpp)
target_compile_definitions(ImGuiRendererDX11 PUBLIC "ImDrawIdx=unsigned int")
target_link_libraries(ImGuiWrapper ImGuiRendererDX11)
endif (WS_OS_WIN)

#if (WS_RENDERER_OPENGL)
#add_library(ImGuiRendererGL ImGuiRendererGL.h ImGuiRendererGL.cpp)
#target_compile_definitions(ImGuiRendererGL PUBLIC "ImDrawIdx=unsigned int")
#target_link_libraries(ImGuiWrapper ImGuiRendererGL)
#endif (WS_RENDERER_OPENGL)

#if (WS_RENDERER_VULKAN)
#add_library(ImGuiRendererVK ImGuiRendererVK.h ImGuiRendererVK.cpp)
#target_compile_definitions(ImGuiRendererVK PUBLIC "ImDrawIdx=unsigned int")
#target_link_libraries(ImGuiWrapper ImGuiRendererVK)
#endif (WS_RENDERER_VULKAN)

if (WS_OS_MAC)
add_library(ImGuiRendererMT ImGuiRendererMT.h ImGuiRendererMT.cpp)
target_compile_definitions(ImGuiRendererMT PUBLIC "ImDrawIdx=unsigned int")
target_link_libraries(ImGuiWrapper ImGuiRendererMT)
endif (WS_OS_MAC)

if (WS_OS_LINUX)
endif (WS_OS_LINUX)